# imageDeal

./: _save.js  amazingball.psd  default.html  default.js  gulpfile.js  haar.js  haarJson.js  package.json  readme.md  server.js  webpack.config.js  worker.js
Imageprocessing/: CMakeLists.txt  main.cpp
class/: AbstructCompute.js  Compute.js  ImageDeal.js  Video.js  index.js  worker.js
dest/: default.html  dest.js  dest.js.map  index.html  main.js
imagecompute/: charts.js  main.js  worker.js
lib/: utils.js
needtorestruct/: haarcascade_frontalface_default.xml  t.txt
needtorestruct/imagecompute/: main.js  talk.md  worker.js
needtorestruct/imgresource/: 0
test/: Compute.test.js  default.test.js  mocha.opts
